[gd_scene format=3 uid="uid://dx8qw2m5p7h3k"]

[ext_resource type="Script" path="res://ui/game_hud.gd" id="1_hud"]
[ext_resource type="Script" path="res://ui/minimap.gd" id="2_minimap"]

[node name="GameHUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="TimerContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="PhaseLabel" type="Label" parent="TimerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "PHASE 1"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="TimerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "03:00"
horizontal_alignment = 1

[node name="ElapsedLabel" type="Label" parent="TimerContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 10
text = "00:00"
horizontal_alignment = 1

[node name="MinimapContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_bottom = 56.0
grow_horizontal = 0
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="Minimap" type="Control" parent="MinimapContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
script = ExtResource("2_minimap")
